@@ -6,6 +6,7 @@
 
 // @lc code=start
 
+import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -14,27 +15,30 @@ class Solution {
     List<List<Integer>> result = new LinkedList<>();
 
     public List<List<Integer>> combinationSum(int[] candidates, int target) {
+        Arrays.sort(candidates);
         backtracking(candidates, target, 0, 0);
         return result;
         
     }
 
     private void backtracking (int[] candidates, int target, int sum, int index) {
-        if (sum > target) {
-            return;
-        }
         if (sum == target) {
             result.add(new LinkedList<>(path));
             return;
         }
 
         for (int i = index; i < candidates.length; i++) {
+            if (sum + candidates[i] > target) {
+                break;
+            }
+
             path.add(candidates[i]);
-            sum += candidates[i];
-            backtracking(candidates, target, sum, i);
-            sum -= candidates[i];  
-            path.removeLast();   
+            backtracking(candidates, target, sum + candidates[i], i);
+            path.remove(path.size() - 1);
+            
+            
         }
+      
 
     }
 }
